--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -27,6 +27,7 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
+    color: #3367FF;
 }
 
 /* Custom Button Styles */
@@ -155,7 +156,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/storm.gif) no-repeat center center scroll;
+    background: url(../img/iceland3.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -200,9 +201,10 @@ hr.small {
 .callout {
     display: table;
     width: 100%;
-    height: 400px;
-    color: #fff;
-    background: url(../img/linux.png) no-repeat center center scroll;
+    height: 250px;
+    color: #3367FF;
+    background: #3367FF;
+    /*background: url(../img/linux.png) no-repeat center center scroll;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -448,7 +450,7 @@ transition-delay:.2s;
   top: calc(20% + 16px);
   
   cursor: pointer;
-  background: black;
+  background: white;
   /*border: 1px solid #b9bbbd;
     box-shadow: 0px 3px 0px 1px #b9bbbd,
     inset 0px 2px 8px 5px #c9cbcd;*/
